# local-ai-agent

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  dev.ps1  local-ai-workbench-prompt.md  local-ai-workbench.sln
backend/: _serverlog.txt  pyproject.toml  requirements.txt
backend/app/: config.py  crud.py  db.py  main.py  schema.sql
backend/app/routers/: agents.py  browser.py  build.py  chat.py  checkpoints.py  comfy.py  files.py  modes.py  projects.py  run.py  search.py  settings.py
backend/app/services/: agentic.py  browser.py  build.py  checkpoints.py  comfy.py  condense.py  diff.py  embeddings.py  modes.py  ollama.py  pipeline.py  projects_util.py  rules.py  runner.py  sandbox.py  settings.py  uploads.py
backend/app/tests/: test_agentic.py  test_build.py  test_checkpoints.py  test_comfy.py  test_condense.py  test_diff.py  test_modes.py  test_pipeline.py  test_runner.py  test_sandbox.py  test_search_browser.py  test_settings.py  test_uploads.py
frontend/: _devlog.txt  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  monacoSetup.ts
frontend/src/api/: client.ts
frontend/src/components/agents/: AgentsView.tsx  CheckpointsPanel.tsx  ModesModal.tsx  StepCard.tsx
frontend/src/components/assets/: AssetsView.tsx  GenerateView.tsx
frontend/src/lib/: fileKind.ts
frontend/src/stores/: agents.ts  build.ts  comfy.ts  preview.ts  project.ts  run.ts  session.ts
templates/webapp-base/: AGENTS.md  package-lock.json
workflows/: ltxv-animation.json  txt2img.json
(+26 files in other folders)
