[project]
name = "workbench-backend"
version = "0.1.0"
description = "Workbench — local AI development studio backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "openai>=1.40",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.uvicorn]
host = "127.0.0.1"
port = 8010
